# gproxy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  changelog.txt  conanfile.py  toolchain-mingw32.cmake
.github/workflows/: build.yml
common/: CMakeLists.txt  config.cpp  config.h  log.cpp  log.h  mingw_atlbase.h  mingw_prefix.h  systemid.cpp  systemid.h  timer.cpp  timer.h  util.cpp  util.h  w3version.h
gproxy/: CMakeLists.txt  argagg.h  bnetchat.h  cmdbuffer.cpp  cmdbuffer.h  commandpacket.cpp  commandpacket.h  gameprotocol.cpp  gameprotocol.h  gproxy.cpp  gproxy.h  gproxy.ini  gpsprotocol.cpp  gpsprotocol.h  incomingfriendlist.cpp  incomingfriendlist.h  incominggamehost.cpp  incominggamehost.h  socket.cpp  socket.h  wc3.cpp  wc3.h
handshake/: CMakeLists.txt  README.md  handshake.cpp  handshake.h
